updated responsiveness for portfolio page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,6 +41,10 @@ body {
   #contactBox {
     margin-right: 15px;
   }
+  .repoImg {
+    border-radius: 5px;
+    width: 100%;
+  }
   
   /* Extra small devices (portrait phones, less than 576px)
   No media query since this is the default in Bootstrap */
