--- a/views/portfolio.handlebars
+++ b/views/portfolio.handlebars
@@ -2,7 +2,7 @@
     <div class="row row-cols-3">
         <div class="col">
             {{#each repos}}
-            <a href="https://www.github.com/{{github}}/{{name}}" target="_blank"><img src="{{imageURL}}" class="mt-3 mb-3"></a>
+            <a href="https://www.github.com/{{github}}/{{name}}" target="_blank"><img src="{{imageURL}}" class="mt-3 mb-1 repoImg"></a>
             {{/each}}
         </div>
     </div>
