--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Kevin Miller - Portfolio</title>
 
     <!-- CSS & Bootstrap Links -->
     <link rel="stylesheet" href="./css/reset.css" />
@@ -53,7 +53,7 @@
             <a class="nav-link" href="/portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="/">About</a>
+            <a class="nav-link" href="/">About</a>
           </li>
         </ul>
       </div>
