--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -28,11 +28,34 @@
                 type="submit"
                 class="btn-lg btn-warning mb-5"
                 id="subButton"
+                data-target="#messageModal"
               >
                 Submit
               </button>
             </div>
           </form>
+
+          <div class="modal" tabindex="-1" id="messageModal" role="dialog">
+            <div class="modal-dialog" role="document">
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5>Thank You</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <p>Your message has been received...</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-warning" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
